  an anonymous function using create_function() in load()). [Patrick]
* Fixed support for multiple authentication types on PHP5 platforms.
  [Guido,Dennis]
* Fixed bug in NF_TRACK_CHANGES mechanism which wasn't triggered properly
  before preUpdate was called from inside the atkUpdateHandler. [Peter]
* Fixed using an embedded datagrid in view action [Arjen Tebbenhof, Dennis]
- Removed atkMetaHandler because it wasn't very useful. [Peter]
- Removed support for regexes in atkMetaPolicy's setIncludes/setExcludes
  because it wasn't very useful and wasn't used anyway. [Peter]
- Deleted Thumbs.db files from winxp theme. [Guido]

Changed in ATK 6.1
------------------
+ Added select method to atkNode which returns an instance of the
  atkSelector class which can be used to fluently build a selectDb
  expression to retrieve a single row, all rows or the row count.
  (PHP5 only!) [Peter]
+ Added support for custom templates in the admin actions. [Ruud]
+ Added generic Ajax DHTML dialog support to ATK (see atkDialog). [Peter]
+ Added support for add dialogs. If you set the NF_ADD_DIALOG on a node you
  will be presented with a DHTML popup dialog for entering a new record
  instead of a separate page. Can also be used for atkOneToManyRelations and
  replaces the AF_ONETOMANY_EMBED functionality. Works automatically if the
  NF_ADD_DIALOG flag is set on the destination node but can also be enabled
  using the AF_ONETOMANY_ADD_DIALOG flag. Please note that this functionality
  should only be used for simple nodes with only a few attributes and no tabs
  or sections. [Dennis, Patrick, Peter]
+ Added support for "add or copy" dialogs. This special type of dialog makes it
  possible for the user to select whatever he/she want to create a new
  record or copy an existing record. The user is presented with a dropdown of
  records to select from and can also select nested atkOneToManyRelations that
  need to be included in the copy process (or not). This functionality can