@@ -1,0 +1,25 @@
+<?php
+
+  /**
+   * This file is part of the Achievo ATK distribution.
+   * Detailed copyright and licensing information can be found
+   * in the doc/COPYRIGHT and doc/LICENSE files which should be
+   * included in the distribution.
+   *
+   * @package atk
+   * @subpackage include
+   *
+   * @copyright (c)2000-2004 Ibuildings.nl BV
+   * @license http://www.achievo.org/atk/licensing ATK Open Source License
+   *
+   * @version $Revision: $
+   * $Id: $
+   */
+
+  /** BASIC ATK INCLUDES **/
+  /** Gives you configs and the atktools **/
+  require_once($config_atkroot.'atk/include/globals.inc');
+  require_once($config_atkroot.'atk/include/configs.inc');
+  require_once($config_atkroot."atk/atktools.inc");
+
+?>
