@@ -428,6 +428,11 @@ Changed in ATK 6.2
 * Fixed bug in NF_TRACK_CHANGES mechanism which wasn't triggered properly
   before preUpdate was called from inside the atkUpdateHandler. [Peter]
 * Fixed using an embedded datagrid in view action [Arjen Tebbenhof, Dennis]
+* Moved a lot of atk/include/initial.inc includes to sperate files, 
+  introducing include/basics.inc for the basics of an ATK app. [Boy,Peter]
+* Moved session initialisation code to atksession_init function,
+  and introduced $config_session_init (true by default), setting this config
+  to false will make sure no session is initialized by ATK. [Boy,Peter] 
 - Removed atkMetaHandler because it wasn't very useful. [Peter]
 - Removed support for regexes in atkMetaPolicy's setIncludes/setExcludes
   because it wasn't very useful and wasn't used anyway. [Peter]
